@@ -134,11 +134,12 @@
  */
 
 #ifndef CONFIG_DISABLE_CLOCK
-#  define SYS_clock_getres             (__SYS_clock+0)
-#  define SYS_clock_gettime            (__SYS_clock+1)
-#  define SYS_clock_settime            (__SYS_clock+2)
-#  define SYS_gettimeofday             (__SYS_clock+3)
-#  define __SYS_timers                 (__SYS_clock+4)
+#  define SYS_os_systime32             (__SYS_clock+0)
+#  define SYS_clock_getres             (__SYS_clock+1)
+#  define SYS_clock_gettime            (__SYS_clock+2)
+#  define SYS_clock_settime            (__SYS_clock+3)
+#  define SYS_gettimeofday             (__SYS_clock+4)
+#  define __SYS_timers                 (__SYS_clock+5)
 #else
 #  define __SYS_timers                 __SYS_clock
 #endif
